I removed the tree and replaced it with a navigation list.

--- a/_includes/category_list.html
+++ b/_includes/category_list.html
@@ -1,9 +1,20 @@
-<ul>
-	<li><a href="/blog/Command_Line_Programming.html">Command Line Programming</a></li>
-	<li><a href="/blog/Git.html">Git</a></li>
-	<li><a href="/blog/iOS.html">iOS Development</a></li>
-	<li><a href="/blog/Neuron_ESB.html">Neuron ESB</a></li>
-	<li><a href="/blog/Software_Development.html">Software Development</a></li>
-	<li><a href="/blog/Windows_Communication_Foundation.html">Windows Communication Foundation</a></li>
-	<li><a href="/blog/ZeroMQ.html">ZeroMQ</a></li>
+<ul class="nav nav-list">
+	<li><a href="/blog/command_line_programming.html">Command Line Programming</a></li>
+	<li><a href="/blog/git.html">Git</a></li>
+	<li><a href="/blog/ios.html">iOS</a></li>
+	<li><a href="/blog/neuron_esb.html">Neuron ESB</a></li>
+	<li><a href="/blog/software_development.html">Software Development</a></li>
+	<li>
+		<a href="/blog/windows_development.html">Windows Development</a>
+		<ul class="nav nav-list">
+			<li><a href="/blog/debugging.html">Debugging</a></li>
+			<li>
+				<a href="/blog/dotnet_development.html">.NET Development</a>
+				<ul class="nav nav-list">
+					<li><a href="/blog/windows_communication_foundation.html">WCF</a></li>
+				</ul>
+			</li>
+		</ul>
+	</li>
+	<li><a href="/blog/zeromq.html">ZeroMQ</a></li>
 </ul>
