--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -19,8 +19,7 @@
     <p class="lead">{{page.description}}</p>
     <div class="row">
         <div class="span4">
-            <h3>Categories</h3>
-            <div id="categoryTree"></div>
+            {% include category_list.html %}
         </div>
         <div class="span8">
             <ul class="unstyled">
