--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -31,8 +31,7 @@
             <div class="row">
                 <div class="span4">
                     <section>
-                        <h4>Blog</h4>
-                        <div id="categoryTree"></div>
+                        {% include category_list.html %}
                     </section>
                 </div>
                 <div class="span8">
