--- a/src/themes/normal.less
+++ b/src/themes/normal.less
@@ -24,30 +24,12 @@ body {
 @import "../../lib/font-awesome/less/font-awesome.less";
 @FontAwesomePath: 'fonts';
 
+@import "../../lib/bootswatch/cerulean/variables.less";
+@import "../../lib/bootswatch/cerulean/bootswatch.less";
+
 @import "pygments.less";
 
 @import url(http://fonts.googleapis.com/css?family=Architects+Daughter);
-
-#jumbotron {
-	background-color: #269;
-	background-image: linear-gradient(rgba(255,255,255,.2) 2px, transparent 2px), linear-gradient(90deg, rgba(255,255,255,.2) 2px, transparent 2px), linear-gradient(rgba(255,255,255,.1) 1px, transparent 1px), linear-gradient(90deg, rgba(255,255,255,.1) 1px, transparent 1px);
-	background-size: 100px 100px, 100px 100px, 20px 20px, 20px 20px;
-	background-position: -2px -2px, -2px -2px, -1px -1px, -1px -1px;
-	height: 300px;
-}
-
-#jumbotron h1, #jumbotron p {
-	text-align: center;
-	color: white;
-}
-
-#jumbotron h1 {
-	margin-top: 100px;
-}
-
-#jumbotron p {
-	margin: 20px 50px 100px 50px;
-}
 
 .post .lead {
 	border-bottom: 1px solid @grayLighter;
