I remapped the Blog link in the navigation bar to the homepage.

--- a/_includes/navigation_bar.html
+++ b/_includes/navigation_bar.html
@@ -25,7 +25,7 @@
             <div class="nav-collapse collapse">
                 <ul id="siteLinks" class="nav">
                     <li class="{{homeClass}}"><a href="/">Home</a></li>
-                    <li class="{{blogClass}}"><a href="/blog/index.html">Blog</a></li>
+                    <li class="{{blogClass}}"><a href="/">Blog</a></li>
                     <li class="{{eventsClass}}"><a href="/events.html">Events</a></li>
                     <li class="{{projectsClass}} dropdown">
                         <a href="/projects.html" class="dropdown-toggle" data-toggle="dropdown">Projects <span class="caret"/></a>
