I updated the navigation bar to list the CIM provider sample in the projects dropdown.

--- a/_includes/navigation_bar.html
+++ b/_includes/navigation_bar.html
@@ -30,9 +30,7 @@
                     <li class="{{projectsClass}} dropdown">
                         <a href="/projects.html" class="dropdown-toggle" data-toggle="dropdown">Projects <span class="caret"/></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Project 1</a></li>
-                            <li><a href="#">Project 2</a></li>
-                            <li><a href="#">Project 3</a></li>
+                            <li><a href="https://github.com/mfcollins3/cimprovider">CIM Provider Sample</a></li>
                         </ul>
                     </li>
                     <li class="{{presentationsClass}}"><a href="/presentations/">Presentations</a></li>
