--- a/src/themes/normal.less
+++ b/src/themes/normal.less
@@ -12,23 +12,23 @@
 
 @import "../../lib/twitter-bootstrap/less/bootstrap.less";
 
+/*
 body {
 	padding-top: @navbarHeight + 1;	
 }
-
-@import "../../lib/twitter-bootstrap/less/responsive.less";
-
-@iconSpritePath: 'images/glyphicons-halflings.png';
-@iconSpritePathWhite: 'images/glyphicons-halflings-white.png';
+*/
 
 @import "../../lib/font-awesome/less/font-awesome.less";
-@FontAwesomePath: 'fonts';
+@FontAwesomePath: '/fonts';
 
+/*
 @import "../../lib/bootswatch/cerulean/variables.less";
 @import "../../lib/bootswatch/cerulean/bootswatch.less";
+*/
 
 @import "pygments.less";
 
+/*
 @import url(http://fonts.googleapis.com/css?family=Architects+Daughter);
 
 .post .lead {
@@ -49,6 +49,7 @@ body > footer {
 #footerContactInformation address span:first-child {
 	font-weight: bold;
 }
+*/
 
 /*!
  * FullCalendar v1.6.1 Stylesheet
