--- a/_includes/navigation_bar.html
+++ b/_includes/navigation_bar.html
@@ -1,7 +1,5 @@
 {% assign prefix = page.url | replace_first:'/','' | split:'/' | first %}
 {% case prefix %}
-{% when 'index.html' %}
-{% assign homeClass = 'active' %}
 {% when 'blog' %}
 {% assign blogClass = 'active' %}
 {% when 'projects.html' %}
@@ -13,45 +11,41 @@
 {% when 'presentations' %}
 {% assign presentationsClass = 'active' %}
 {% endcase %}
-<nav id="navigationBar" class="navbar navbar-fixed-top">
-    <div class="navbar-inner">
-        <div class="container">
-            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </a>
-            <a class="brand" href="/">{{site.brand}}</a>
-            <div class="nav-collapse collapse">
-                <ul id="siteLinks" class="nav">
-                    <li class="{{homeClass}}"><a href="/">Home</a></li>
-                    <li class="{{blogClass}}"><a href="/">Blog</a></li>
-                    <li class="{{eventsClass}}"><a href="/events.html">Events</a></li>
-                    <li class="{{projectsClass}} dropdown">
-                        <a href="/projects.html" class="dropdown-toggle" data-toggle="dropdown">Projects <span class="caret"/></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="https://github.com/mfcollins3/cimprovider">CIM Provider Sample</a></li>
-                        </ul>
-                    </li>
-                    <li class="{{presentationsClass}}"><a href="/presentations/">Presentations</a></li>
-                    <li class="{{aboutMeClass}}"><a href="/about-me.html">About Me</a></li>
+<nav id="navigationBar" class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="/">{{site.brand}}</a>
+    </div>
+    <div class="collapse navbar-collapse navbar-ex1-collapse">
+        <ul class="nav navbar-nav">
+            <li class="{{blogClass}}"><a href="/blog/index.html">Blog</a></li>
+            <li class="{{eventsClass}}"><a href-"/events.html">Events</a></li>
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Projects <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                    <li><a href="https://github.com/mfcollins3/cimprovider">CIM Provider Sample</a></li>
                 </ul>
-                <p class="navbar-text hidden-desktop">Contact Me:</p>
-                <ul id="socialMediaLinks" class="nav pull-right">
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Contact Me <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="https://github.com/mfcollins3" title="GitHub"><span class="socialMediaIcon icon-github"></span><span>GitHub</span></a></li>
-                            <li><a href="https://www.facebook.com/mfcollins3" title="Facebook"><span class="socialMediaIcon icon-facebook"></span><span>Facebook</span></a></li>
-                            <li><a href="http://twitter.com/mfcollins3" title="Twitter"><span class="socialMediaIcon icon-twitter"></span><span>Twitter</span></a></li>
-                            <li><a href="http://www.linkedin.com/in/michaelfcollins3/" title="LinkedIn"><span class="socialMediaIcon icon-linkedin"></span><span>LinkedIn</span></a></li>
-                            <li><a href="https://plus.google.com/108671264811803826632/" title="Google+"><span class="socialMediaIcon icon-google-plus"></span><span>Google+</span></a></li>
-                            <li><a href="http://pinterest.com/mfcollins3/" title="Pinterest"><span class="socialMediaIcon icon-pinterest"></span><span>Pinterest</span></a></li>
-                            <li><a href="skype:mfcollins3" title="Skype"><span class="socialMediaIcon icon-phone"></span><span>Skype</span></a></li>
-                        </ul>
-                    </li>
+            </li>
+            <li class="{{aboutMeClass}}"><a href="/about-me.html">About Me</a></li>
+        </ul>
+        <ul id="socialMediaLinks" class="nav navbar-nav navbar-right">
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Contact Me <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="https://github.com/mfcollins3" title="GitHub"><span class="socialMediaIcon icon-github"></span><span>GitHub</span></a></li>
+                    <li><a href="https://www.facebook.com/mfcollins3" title="Facebook"><span class="socialMediaIcon icon-facebook"></span><span>Facebook</span></a></li>
+                    <li><a href="http://twitter.com/mfcollins3" title="Twitter"><span class="socialMediaIcon icon-twitter"></span><span>Twitter</span></a></li>
+                    <li><a href="http://www.linkedin.com/in/michaelfcollins3/" title="LinkedIn"><span class="socialMediaIcon icon-linkedin"></span><span>LinkedIn</span></a></li>
+                    <li><a href="https://plus.google.com/108671264811803826632/" title="Google+"><span class="socialMediaIcon icon-google-plus"></span><span>Google+</span></a></li>
+                    <li><a href="http://pinterest.com/mfcollins3/" title="Pinterest"><span class="socialMediaIcon icon-pinterest"></span><span>Pinterest</span></a></li>
+                    <li><a href="skype:mfcollins3" title="Skype"><span class="socialMediaIcon icon-phone"></span><span>Skype</span></a></li>
                 </ul>
-            </div>
-        </div>
+            </li>
+        </ul>
     </div>
 </nav>
