--- a/src/themes/normal.less
+++ b/src/themes/normal.less
@@ -12,21 +12,37 @@
 
 @import "../../lib/twitter-bootstrap/less/bootstrap.less";
 
-/*
+@icon-font-path: "/fonts/";
+
 body {
-	padding-top: @navbarHeight + 1;	
+	padding-top: 50px;
 }
-*/
 
 @import "../../lib/font-awesome/less/font-awesome.less";
 @FontAwesomePath: '/fonts';
 
-/*
 @import "../../lib/bootswatch/cerulean/variables.less";
 @import "../../lib/bootswatch/cerulean/bootswatch.less";
-*/
 
 @import "pygments.less";
+
+span.socialMediaIcon {
+	display: block;
+	float: left;
+	width: 30px;
+}
+
+#body .container > div {
+	.make-row();
+}
+
+#featuredArticle {
+	.make-md-column(9);
+}
+
+#recentArticles {
+	.make-md-column(3);
+}
 
 /*
 @import url(http://fonts.googleapis.com/css?family=Architects+Daughter);
@@ -39,17 +55,13 @@ body {
 .post .author {
 	font-weight: bold
 }
+*/
 
 body > footer {
-	border-top: 1px solid @grayLighter;
-	margin-top: @baseLineHeight / 2;
-	padding-top: @baseLineHeight / 2;
+	border-top: 1px solid @gray-lighter;
+	margin-top: 10px;
+	padding-top: 10px;
 }
-
-#footerContactInformation address span:first-child {
-	font-weight: bold;
-}
-*/
 
 /*!
  * FullCalendar v1.6.1 Stylesheet
