--- a/_includes/navigation_bar.html
+++ b/_includes/navigation_bar.html
@@ -24,7 +24,7 @@
     <div class="collapse navbar-collapse navbar-ex1-collapse">
         <ul class="nav navbar-nav">
             <li class="{{blogClass}}"><a href="/blog/index.html">Blog</a></li>
-            <li class="{{eventsClass}}"><a href-"/events.html">Events</a></li>
+            <li class="{{eventsClass}}"><a href="/events.html">Events</a></li>
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Projects <b class="caret"></b></a>
                 <ul class="dropdown-menu">
