--- a/src/themes/normal.less
+++ b/src/themes/normal.less
@@ -44,6 +44,27 @@ span.socialMediaIcon {
 	.make-md-column(3);
 }
 
+.lead {
+	border-top: 1px solid @gray-lighter;
+	border-bottom: 1px solid @gray-lighter;
+	padding-top: 10px;
+	margin-top: 10px;
+	padding-bottom: 10px;
+	margin-bottom: 10px;
+}
+
+.author {
+	font-weight: bold;
+}
+
+#recentArticles h1 {
+	.h3;
+}
+
+#recentArticles h2 {
+	.h4;
+}
+
 /*
 @import url(http://fonts.googleapis.com/css?family=Architects+Daughter);
 
