--- a/src/themes/normal.less
+++ b/src/themes/normal.less
@@ -65,18 +65,25 @@ span.socialMediaIcon {
 	.h4;
 }
 
-/*
-@import url(http://fonts.googleapis.com/css?family=Architects+Daughter);
-
-.post .lead {
-	border-bottom: 1px solid @grayLighter;
-	padding-bottom: 20px;
+#categories h1 {
+	.h3;
 }
 
-.post .author {
-	font-weight: bold
+#categories {
+	.make-md-column(4);
 }
-*/
+
+#posts {
+	.make-md-column(8);
+}
+
+#post {
+	.make-md-column(8);
+}
+
+.child-list {
+	margin-left: 10px;
+}
 
 body > footer {
 	border-top: 1px solid @gray-lighter;
