--- a/_includes/category_list.html
+++ b/_includes/category_list.html
@@ -1,20 +1,28 @@
-<ul class="nav nav-list">
-	<li><a href="/blog/command_line_programming.html">Command Line Programming</a></li>
-	<li><a href="/blog/git.html">Git</a></li>
-	<li><a href="/blog/ios.html">iOS</a></li>
-	<li><a href="/blog/neuron_esb.html">Neuron ESB</a></li>
-	<li><a href="/blog/software_development.html">Software Development</a></li>
-	<li>
-		<a href="/blog/windows_development.html">Windows Development</a>
-		<ul class="nav nav-list">
-			<li><a href="/blog/debugging.html">Debugging</a></li>
-			<li>
-				<a href="/blog/dotnet_development.html">.NET Development</a>
-				<ul class="nav nav-list">
-					<li><a href="/blog/windows_communication_foundation.html">WCF</a></li>
-				</ul>
-			</li>
-		</ul>
-	</li>
-	<li><a href="/blog/zeromq.html">ZeroMQ</a></li>
-</ul>
+<section id="categories">
+    <header>
+        <h1>Categories</h1>
+    </header>
+    <div class="nav">
+        <ul class="list-unstyled">
+            <li><a href="#">Command Line Programming</a></li>
+            <li><a href="#">Git</a></li>
+            <li><a href="#">iOS Development</a></li>
+            <li><a href="#">Neuron ESB</a></li>
+            <li><a href="#">Software Development</a></li>
+            <li>
+                <a href="#">Windows Development</a><a class="pull-right" data-toggle="collapse" data-target="#windowsDevelopmentChildren" href="#"><span class="glyphicon glyphicon-chevron-down"></span></a>
+                <ul class="list-unstyled collapse child-list" id="windowsDevelopmentChildren">
+                    <li>
+                        <a href="#">.NET Development</a>
+                        <a class="pull-right" data-toggle="collapse" data-target="#dotnetDevelopmentChildren" href="#"><span class="glyphicon glyphicon-chevron-down"></span></a>
+                        <ul class="list-unstyled collapse child-list" id="dotnetDevelopmentChildren">
+                            <li><a href="#">WCF</a><li>
+                        </ul>
+                    </li>
+                    <li><a href="#">Debugging</a></li>
+                </ul>
+            </li>
+            <li><a href="#">ZeroMQ</a></li>
+        </ul>
+    </div>
+</section>
