--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>{{page.title}} - {{site.brand}}</title>
         <link rel="stylesheet" href="/css/{{site.theme}}.css"/>
