--- a/_includes/navigation_bar.html
+++ b/_includes/navigation_bar.html
@@ -4,7 +4,7 @@
       <button type="button"
               class="navbar-toggle collapsed"
               data-toggle="collapse"
-              data-target="navbar-collapse">
+              data-target="#main-navbar-collapse">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -12,7 +12,7 @@
       </button>
       <a class="navbar-brand" href="/">{{site.brand}}</a>
     </div>
-    <div class="collapse navbar-collapse" id="navbar-collapse">
+    <div class="collapse navbar-collapse" id="main-navbar-collapse">
       <ul class="nav navbar-nav">
         <li><a href="/blog">Blog</a></li>
       </ul>
