Adjust post layout so excerpt is more prominent
I modified the markup and stylesheet for the website so that post
excerpts appear differently from the body text in order to highlight
the abstract/summary of the article and make it appear separate from
the body content.

--- a/css/normal.css
+++ b/css/normal.css
@@ -6875,3 +6875,14 @@ body > footer {
   margin-top: 20px;
   padding-top: 20px;
 }
+article.post > p:first-of-type {
+  margin-bottom: 20px;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 1.4;
+}
+@media (min-width: 768px) {
+  article.post > p:first-of-type {
+    font-size: 21px;
+  }
+}
