--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -57,7 +57,7 @@
     </nav>
 
     <section>
-      <article>
+      <article class="post">
         <header>
           <h1>{{page.title}}</h1>
           <p>{{page.date | date_to_long_string}}</p>
