Modify background position of cover photo
I changed the background position of the cover photo so that it is
centered on all devices in which is appears.

--- a/css/normal.css
+++ b/css/normal.css
@@ -6844,6 +6844,11 @@ button.close {
     filter: alpha(opacity=50);
   }
 }
+@media (min-width: 768px) and (max-width: 991px) {
+  .jumbotron > .background {
+    background-position: center;
+  }
+}
 .jumbotron > .container {
   z-index: 2;
   background: lightgray;
