--- a/less/normal.less
+++ b/less/normal.less
@@ -25,6 +25,9 @@
     width: 100%;
     .opacity(0.5);
   }
+  @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+    background-position: center;
+  }
 }
 
 .jumbotron > .container {
