Wrote new blog post
I wrote a new blog post "Stuck in a Rut".

I modified Gruntfile.coffee to enable drafts when reviewing the website
locally.

I changed the layout for a post to enable displaying a cover photo for
a post and an attribution if using a Creative Commons picture.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,8 +26,13 @@
   <meta name="twitter:creator" content="@{{page.twitter_creator}}"/>
   {% include google_analytics.html %}
 </head>
-<body>
+<body class="post">
   {% include navigation_bar.html %}
+  {% if page.cover_photo %}
+  <div class="jumbotron" style="background-image:url('/images/{{page.cover_photo}}')">
+  </div>
+  {% endif %}
+
   <div class="container">
 
     {% if page.next %}
