--- a/less/normal.less
+++ b/less/normal.less
@@ -11,9 +11,12 @@
 }
 
 .jumbotron > .background {
+  background-position: center;
+
   @media (max-width: @screen-xs-max) {
     .responsive-invisibility();
   }
+
   @media (min-width: @screen-sm-min) {
     position: absolute;
     left: 0;
@@ -24,9 +27,6 @@
     height: 800px;
     width: 100%;
     .opacity(0.5);
-  }
-  @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
-    background-position: center;
   }
 }
 
@@ -52,7 +52,8 @@ article.post > p:first-of-type {
 
 body.post .jumbotron {
   background-size: cover;
-  height: 500;
+  background-position: center;
+  height: 500px;
   width: 100%;
 
   @media (max-width: @screen-xs-max) {
