--- a/less/normal.less
+++ b/less/normal.less
@@ -77,3 +77,7 @@ body.post .cover-photo-credit {
     .responsive-invisibility();
   }
 }
+
+#recentPosts article header h1 {
+  font-size: @font-size-h4;
+}
