--- a/_includes/javascript.html
+++ b/_includes/javascript.html
@@ -1,4 +1,4 @@
 <script type="text/javascript" src="/js/vendor.js"></script>
 {% if page.javascript %}
-    <script type="text/javascript" src="/javascript/{{page.javascript}}.js"></script>
+    <script type="text/javascript" src="/js/{{page.javascript}}.js"></script>
 {% endif %}
