New blog post: Refactoring My Go Web Server
I wrote a new blog post about refactoring my Go web API server to make
it better and easier to maintain.

I fixed a problem with the post template for older posts without a
cover photo. The previous and next buttons at the top of the blog post
were covered by the fixed navigation bar. I modified the style sheet
and the post template to make the navigation buttons visible.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,7 +26,11 @@
   <meta name="twitter:creator" content="@{{page.twitter_creator}}"/>
   {% include google_analytics.html %}
 </head>
+{% if page.cover_photo %}
 <body class="post">
+{% else %}
+<body class="post no-cover-photo">
+{% endif %}
   {% include navigation_bar.html %}
   {% if page.cover_photo %}
   <div class="jumbotron" style="background-image:url('/images/{{page.cover_photo}}')">
