--- a/less/normal.less
+++ b/less/normal.less
@@ -81,3 +81,7 @@ body.post .cover-photo-credit {
 #recentPosts article header h1 {
   font-size: @font-size-h4;
 }
+
+body.post.no-cover-photo {
+  padding-top: 50px;
+}
