--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{site.brand}}: {{page.title}}</title>
   <link rel="stylesheet" href="/css/{{page.theme}}.css" media="screen">
-  <meta name="description" content="{{page.description}}"/>
+  <meta name="description" content="{{page.excerpt | remove: '<p>' | remove: '</p>'}}"/>
   <meta name="author" content="{{page.author}}"/>
   <meta name="og:title" content="{{page.title}}"/>
   <meta name="og:type" content="article"/>
   <meta name="og:url" content="http://www.michaelfcollins3.me{{page.url}}"/>
-  <meta name="og:description" content="{{page.excerpt}}"/>
+  <meta name="og:description" content="{{page.excerpt | remove: '<p>' | remove: '</p>'}}"/>
   <meta name="og:published_time" content="{{page.date | date:'%Y-%m-%d'}}"/>
   {% if page.modified_time %}
   <meta name="og:modified_time" content="{{page.modified_time | date:'%Y-%m-%d'}}"/>
@@ -22,7 +22,7 @@
   <meta name="twitter:card" content="summary"/>
   <meta name="twitter:url" content="http://www.michaelfcollins3.me{{page.url}}"/>
   <meta name="twitter:title" content="{{page.title}}"/>
-  <meta name="twitter:description" content="{{page.excerpt}}"/>
+  <meta name="twitter:description" content="{{page.excerpt | remove: '<p>' | remove: '</p>'}}"/>
   <meta name="twitter:creator" content="@{{page.twitter_creator}}"/>
   {% include google_analytics.html %}
 </head>
