Add navigation buttons to bottom of post
I added the navigation buttons following the post and before the
comments to allow readers to move forward to the next post or backward
to the previous post after reading a post.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -73,6 +73,20 @@
         </header>
         {{content}}
         <footer>
+          <nav>
+            <ul class="pager">
+              <li class="previous {{previous_disabled}}">
+                <a href="{{page.next.url}}">
+                  <span aria-hidden="true">&larr;</span> Next Post</span>
+                </a>
+              </li>
+              <li class="next {{next_disabled}}">
+                <a href="{{page.previous.url}}">
+                  <span aria-hidden="true">&rarr;</span> Previous Post</span>
+                </a>
+              </li>
+            </ul>
+          </nav>
           {% include disqus_thread.html %}
         </footer>
       </article>
