--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,29 +1,31 @@
-<div class="legal">
-  <p>
-    Copyright &copy; 2012-2019
-  </p>
-  <p>
-    The views expressed on this website are mine alone and do not necessarily
-    reflect the views of my employer.
-  </p>
-  <p>
-    Unless otherwise indicated, all source code that is published on this
-    website is released under 
-    <a href="http://www.opensource.org/licenses/mit-license.php">The MIT License</a> and can be
-    reused without permission for both open source and commercial
-    development.
-  </p>
-  <p>
-    Last updated: <time datetime="{{site.time | date_to_xmlschema}}">{{site.time | date:'%B %d, %Y'}} at {{site.time | date:'%I:%M:%S %p %z'}}</time>
-  </p>
-</div>
-<div class="contact">
-  <strong>Michael F. Collins, III</strong><br>
-  <i class="far fa-browser"></i> <a class="contact-link" href="https://www.michaelfcollins3.me">Website</a><br>
-  <i class="far fa-envelope"></i> <a class="contact-link" href="mailto:michael.collins@naked.software">Personal Email</a><br>
-  <i class="far fa-envelope"></i> <a class="contact-link" href="mailto:michael.collins@neudesic.com">Work Email</a><br>
-  <i class="fab fa-facebook"></i> <a class="contact-link" href="https://www.facebook.com/mfcollins3">Facebook</a><br>
-  <i class="fab fa-twitter"></i> <a class="contact-link" href="https://twitter.com/mfcollins3">Twitter</a><br>
-  <i class="fab fa-linkedin"></i> <a class="contact-link" href="https://www.linkedin.com/in/michaelfcollins3/">LinkedIn</a><br>
-  <i class="fab fa-skype"></i> <a class="contact-link" href="skype:mfcollins3">Skype</a>
+<div class="container">
+  <div class="legal">
+    <p>
+      Copyright &copy; 2012-2019
+    </p>
+    <p>
+      The views expressed on this website are mine alone and do not necessarily
+      reflect the views of my employer.
+    </p>
+    <p>
+      Unless otherwise indicated, all source code that is published on this
+      website is released under 
+      <a href="http://www.opensource.org/licenses/mit-license.php">The MIT License</a> and can be
+      reused without permission for both open source and commercial
+      development.
+    </p>
+    <p>
+      Last updated: <time datetime="{{site.time | date_to_xmlschema}}">{{site.time | date:'%B %d, %Y'}} at {{site.time | date:'%I:%M:%S %p %z'}}</time>
+    </p>
+  </div>
+  <div class="contact">
+    <strong>Michael F. Collins, III</strong><br>
+    <i class="far fa-browser"></i> <a class="contact-link" href="https://www.michaelfcollins3.me">Website</a><br>
+    <i class="far fa-envelope"></i> <a class="contact-link" href="mailto:michael.collins@naked.software">Personal Email</a><br>
+    <i class="far fa-envelope"></i> <a class="contact-link" href="mailto:michael.collins@neudesic.com">Work Email</a><br>
+    <i class="fab fa-facebook"></i> <a class="contact-link" href="https://www.facebook.com/mfcollins3">Facebook</a><br>
+    <i class="fab fa-twitter"></i> <a class="contact-link" href="https://twitter.com/mfcollins3">Twitter</a><br>
+    <i class="fab fa-linkedin"></i> <a class="contact-link" href="https://www.linkedin.com/in/michaelfcollins3/">LinkedIn</a><br>
+    <i class="fab fa-skype"></i> <a class="contact-link" href="skype:mfcollins3">Skype</a>
+  </div>
 </div>
